--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,13 +19,20 @@
   "Friday": "Пятница",
   "Saturday": "Суббота",
   "Sunday": "Восресенье",
-  "Mon": "Пн",
-  "Tue": "Вт",
-  "Wed": "Ср",
-  "Thu": "Чт",
-  "Fri": "Пт",
-  "Sat": "Сб",
-  "Sun": "Вс",
+  "Mo": "Пн",
+  "Tu": "Вт",
+  "We": "Ср",
+  "Th": "Чт",
+  "Fr": "Пт",
+  "Sa": "Сб",
+  "Su": "Вс",
+  "пн": "Пн",
+  "вт": "Вт",
+  "ср": "Ср",
+  "чт": "Чт",
+  "пт": "Пт",
+  "сб": "Сб",
+  "вс": "Вс",
   "Week": "Неделя:",
   "My tasks": "Мoи задачи:",
   "Earned points": "Заработано баллов :",
@@ -70,7 +77,7 @@
   "February": "Февраля",
   "March": "Марта",
   "April": "Апреля",
-  "May": "Майя",
+  "May": "Мая",
   "June": "Июня",
   "July": "Июля",
   "August": "Августа",
