--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -44,8 +44,8 @@
   "Always ready for new challenges": "Always ready for new challenges!",
   "Tofik Hasanov": "Tofik Hasanov",
   "Anatolij Dejneko": "Anatolij Dejneko",
-  "Dmirty Gupanets": "Dmirty Gupanets",
-  "Tatiana Daniliuk": "Tatiana Daniliuk",
+  "Dmitry Gupanets": "Dmitry Gupanets",
+  "Tatiana Danyliuk": "Tatiana Danyliuk",
   "Aleksandr Kasian": "Aleksandr Kasian",
   "Yelyzaveta Kudelia": "Yelyzaveta Kudelia",
   "Aleksandr Nepiyvoda": "Aleksandr Nepiyvoda",
