--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -44,9 +44,9 @@
   "Always ready for new challenges": "Завжди готові до нових викликів!",
   "Tofik Hasanov": "Тофік Гасанов",
   "Anatolij Dejneko": "Анатолій Дейнеко",
-  "Dmirty Gupanets": "Дмитро Гупанець",
-  "Tatiana Daniliuk": "Тетяна Данилюк",
-  "Aleksandr Kasian": "Олександр Касян",
+  "Dmitry Gupanets": "Дмитро Гупанець",
+  "Tatiana Danyliuk": "Тетяна Данилюк",
+  "Aleksandr Kasian": "Олександр Кас'ян",
   "Yelyzaveta Kudelia": "Єлизавета Куделя",
   "Aleksandr Nepiyvoda": "Олександр Непийвода",
   "Team Lead": "Тім Лід",
