--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -99,5 +99,6 @@
   "No": "Нет",
   "this is mandatory area": "это обязательное поле",
   "password must be at least 8 characters": "длина пароля - не менее 8 символов",
-  "invalid format": "неверный формат"
+  "invalid format": "неверный формат",
+  "password must contain a number": "пароль должен содержать цифру"
 }
