--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -100,5 +100,6 @@
   "No": "Ні",
   "this is mandatory area": "це обов'язкове поле",
   "password must be at least 8 characters": "довжина паролю - не менше 8 символів",
-  "invalid format": "невірний формат"
+  "invalid format": "невірний формат",
+  "password must contain a number": "пароль має містити цифру"
 }
