--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -101,5 +101,6 @@
   "this is mandatory area": "this is mandatory area",
   "password must be at least 8 characters": "password must be at least 8 characters",
   "invalid format": "invalid format",
-  "password must contain a number": "password must contain a number"
+  "password must contain a number": "password must contain a number",
+  "Wrong password": "wrong password!"
 }
